# erlup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux-builds-on-master.yaml
docs/: index.html
src/: build.rs  cli.yml  config.rs  erl.rs  main.rs
