[package]
name = "erlup"
version = "0.1.0"
authors = ["Tristan Sloughter <t@crashfast.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.3.0", features = ["yaml", "color"]}
log = "0.3.6"
env_logger = "0.3.3"
tempdir = "0.3.4"
tar = "0.4.5"
glob = "*"
rust-ini = "0.13"
dirs = "2.0.2"
indicatif = "0.11.0"
console = "*"
num_cpus = "1.8.0"
shell-words = "1.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0.20"