[package]
name = "erlup"
version = "0.1.0"
authors = ["Tristan Sloughter <t@crashfast.com>"]
edition = "2018"
repository = "https://github.com/tsloughter/erlup"

[dependencies]
clap = {version = "2.3.0", features = ["yaml", "color"]}
log = "0.3.6"
env_logger = "0.3.3"
tempdir = "0.3.4"
tar = "0.4.5"
glob = "*"
rust-ini = "0.13"
dirs = "2.0.2"
indicatif = "0.11.0"
console = "*"
num_cpus = "1.8.0"
shell-words = "1.0.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
